--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -158,10 +158,15 @@
     <Compile Include="Controllers\HelloController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PdfController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DTOs\UserResponse.cs" />
+    <Compile Include="Models\Entities\UsersEntity.cs" />
+    <Compile Include="Models\Repository\UsersRepository.cs" />
+    <Compile Include="Models\DTOs\CreateUserRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TestService.cs" />
   </ItemGroup>
@@ -233,9 +238,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Helloa\" />
     <Folder Include="Views\Pdfa\" />
+    <Folder Include="Views\UsersRepository\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
