--- a/backend/Web.config
+++ b/backend/Web.config
@@ -11,9 +11,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<connectionStrings>
-		<add name="MyDbConnection"
-			 connectionString="Server=localhost;Database=test_mydb;Trusted_Connection=True;"
-			 providerName="System.Data.SqlClient" />
+		<add name="MyDbConnection" connectionString="Server=localhost;Database=test_mydb;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8.1" />
@@ -47,7 +45,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+				<bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
