--- a/backend/packages.config
+++ b/backend/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
+  <package id="Dapper" version="2.1.35" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc.ja" version="5.2.9" targetFramework="net481" />
