--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "ag-grid-community": "^34.2.0",
     "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
+    "date-holidays": "^3.24.4",
+    "jotai": "^2.12.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.2.0",
