--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -161,17 +161,24 @@
     <Compile Include="Controllers\HelloController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PdfController.cs" />
+    <Compile Include="Controllers\PlanController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DTOs\ContentTypeDto.cs" />
+    <Compile Include="Models\DTOs\PlanRecordDto.cs" />
+    <Compile Include="Models\DTOs\TestItem.cs" />
+    <Compile Include="Models\DTOs\TestPlanDto.cs" />
     <Compile Include="Models\DTOs\UpdateUserRepuest.cs" />
     <Compile Include="Models\DTOs\UserResponse.cs" />
     <Compile Include="Models\Entities\UsersEntity.cs" />
+    <Compile Include="Models\Repository\PlanRepository.cs" />
     <Compile Include="Models\Repository\UsersRepository.cs" />
     <Compile Include="Models\DTOs\CreateUserRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PlanService.cs" />
     <Compile Include="Services\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
