--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -168,6 +168,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DTOs\ContentTypeDto.cs" />
+    <Compile Include="Models\DTOs\ContentTypeListDto.cs" />
     <Compile Include="Models\DTOs\PlanRecordDto.cs" />
     <Compile Include="Models\DTOs\TestItem.cs" />
     <Compile Include="Models\DTOs\TestPlanDto.cs" />
