バージョン管理仕様変更

--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Models\DTOs\ContentTypeListDto.cs" />
     <Compile Include="Models\DTOs\PlanHistoryDto.cs" />
     <Compile Include="Models\DTOs\PlanRecordDto.cs" />
+    <Compile Include="Models\DTOs\PlanVersionSnapshotDto.cs" />
     <Compile Include="Models\DTOs\TestItem.cs" />
     <Compile Include="Models\DTOs\TestItemHistory.cs" />
     <Compile Include="Models\DTOs\TestPlanDto.cs" />
@@ -178,6 +179,7 @@
     <Compile Include="Models\DTOs\UpdateUserRepuest.cs" />
     <Compile Include="Models\DTOs\UserResponse.cs" />
     <Compile Include="Models\Entities\PlanEntity.cs" />
+    <Compile Include="Models\Entities\PlanVersionSnapshotEntity.cs" />
     <Compile Include="Models\Entities\UsersEntity.cs" />
     <Compile Include="Models\Repository\PlanRepository.cs" />
     <Compile Include="Models\Repository\UsersRepository.cs" />
