--- a/backend/packages.config
+++ b/backend/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
+  <package id="CsvHelper" version="33.1.0" targetFramework="net481" />
   <package id="Dapper" version="2.1.35" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
@@ -20,9 +21,17 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.ja" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages.ja" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net481" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
