エクセル投入対応

--- a/backend/packages.config
+++ b/backend/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
   <package id="CsvHelper" version="33.1.0" targetFramework="net481" />
   <package id="Dapper" version="2.1.35" targetFramework="net481" />
+  <package id="ExcelDataReader" version="3.8.0" targetFramework="net481" />
+  <package id="ExcelDataReader.DataSet" version="3.8.0" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc.ja" version="5.2.9" targetFramework="net481" />
@@ -33,5 +35,6 @@
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
