--- a/backend/Web.config
+++ b/backend/Web.config
@@ -9,13 +9,17 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<!-- 報告書システム設定 -->
+		<add key="TemplateBasePath" value="C:\app_data\templates" />
+		<add key="ImagesBasePath" value="C:\app_data\images" />
+		<add key="ReportsBasePath" value="C:\app_data\reports" />
 	</appSettings>
 	<connectionStrings>
 		<add name="MyDbConnection" connectionString="Server=localhost;Database=test_mydb;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8.1" />
-		<httpRuntime targetFramework="4.8.1" />
+		<httpRuntime targetFramework="4.8.1" maxRequestLength="52428800" executionTimeout="3600" />
 	</system.web>
 	<system.webServer>
 		<handlers>
@@ -24,6 +28,11 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="52428800" />
+			</requestFiltering>
+		</security>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -61,7 +70,19 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
