--- a/backend/packages.config
+++ b/backend/packages.config
@@ -2,10 +2,16 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
+  <package id="ClosedXML" version="0.105.0" targetFramework="net481" />
+  <package id="ClosedXML.Parser" version="2.0.0" targetFramework="net481" />
   <package id="CsvHelper" version="33.1.0" targetFramework="net481" />
   <package id="Dapper" version="2.1.35" targetFramework="net481" />
+  <package id="DocumentFormat.OpenXml" version="3.1.1" targetFramework="net481" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.1.1" targetFramework="net481" />
   <package id="ExcelDataReader" version="3.8.0" targetFramework="net481" />
   <package id="ExcelDataReader.DataSet" version="3.8.0" targetFramework="net481" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net481" />
+  <package id="FreeSpire.XLS" version="14.2.0" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc.ja" version="5.2.9" targetFramework="net481" />
@@ -30,10 +36,14 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net481" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="RBush.Signed" version="4.0.0" targetFramework="net481" />
+  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net481" />
+  <package id="SixLabors.ImageSharp" version="3.1.12" targetFramework="net481" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Drawing.Common" version="10.0.1" targetFramework="net481" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
