--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-pdf/renderer": "^4.3.1",
     "ag-grid-community": "^34.2.0",
     "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "date-holidays": "^3.24.4",
     "jotai": "^2.12.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "konva": "^9.3.3",
+    "react": "^18.3.1",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.54.0",
+    "react-konva": "^18.2.10",
     "react-pdf": "^10.2.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^18.3.12",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
